--- a/traverseDir/dialog.ui
+++ b/traverseDir/dialog.ui
@@ -13,7 +13,7 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
-  <widget class="QPushButton" name="opeDirectory">
+  <widget class="QPushButton" name="openDirectory">
    <property name="geometry">
     <rect>
      <x>60</x>
